# securevision

./: .env  .env.example  .pre-commit-config.yaml  Dockerfile.api  Dockerfile.worker  README.md  docker-compose.yml  pyproject.toml
configs/: attack_autoattack.yaml  backdoor_badnets_stop_to_speed.yaml  federated_fltrust_20c_30mal.yaml  train_gtsrb_resnet18.yaml  train_gtsrb_resnet18_trades.yaml
scripts/: download_ffpp.py  download_gtsrb.py  seed_example_data.py
securevision/: __init__.py  config.py  logging.py
securevision/api/: auth.py  deps.py  main.py
securevision/api/routers/: artifacts.py  attacks.py  datasets.py  defenses.py  evaluation.py  federated.py  health.py  jobs.py  models.py  xai.py
securevision/attacks/: fgsm.py
securevision/data/: registry.py
securevision/data/loaders/: gtsrb.py
securevision/data/poisoning/: backdoor_badnets.py  label_flip.py
securevision/db/: models.py  session.py
securevision/db/alembic/: env.py
securevision/db/alembic/versions/: 0001_init.py
securevision/defenses/: input_sanitization.py
securevision/evaluation/: metrics.py
securevision/federated/: aggregators.py
securevision/models/: registry.py  utils.py
securevision/queue/: app.py
securevision/queue/tasks/: train.py
securevision/utils/: determinism.py  hashing.py  image_ops.py  io.py  s3.py  seeds.py  timing.py
tests/: conftest.py  test_api_health.py  test_attacks_defenses.py  test_dataset_registry.py  test_evaluation_metrics.py  test_federated_aggregators.py  test_training_smoke.py
